# Tonality

./: .gitignore  CMakeLists.txt  LICENSE  Music_input.cpp
src/: Music_input.cpp  main.cpp
src/Audio processing/: Music_input.cpp
src/Audio_processing/: Chroma_vector.cpp  Chroma_vector.h  Dsp.cpp  Dsp.h  Graph.cpp  Graph.h  Music_input.cpp  Music_input.h  Onset_detection.cpp  Onset_detection.h  Onset_detection_timestamps.cpp  Onset_detection_timestamps.h
